# canvasmcp

./: .gitignore  .mcprc.json  LICENSE  README.md  announcement.ts  canvas_api.py  canvas_cli.py  canvas_tool_registry.py  canvas_tools.py  chrome_cookies.py  export.ts  index.ts  mcp-server.js  mcp-server.ts  mcp_entry.py  mcp_server.py  openapi-ts.config.ts  openapi3.json  package.json  pyproject.toml  system.ts  weather.ts
auth/: __init__.py  chrome_cookies.py  errors.py  inspect.py  probe.py  profiles.py  resolve.py  session.py  settings.py  urls.py
canvas/: client.gen.ts  sdk.gen.ts  types.gen.ts
canvas-generated/: sdk.gen.ts
canvas-generated/tools/: acceptCourseInvitation.ts  activateRole.ts  activityStreamSummary.ts  addObservee.ts  addRecipients.ts  addsLastAttendedDateToStudentEnrollmentInCourse.ts  answeringQuestions.ts  batchCreateOverridesInCourse.ts  batchRetrieveOverridesInCourse.ts  batchUpdateConversations.ts  batchUpdateOverridesInCourse.ts  closeNotificationForUser.ts  completeQuizSubmissionTurnItIn.ts  copyCourseContent.ts  copyFile.ts  courseActivityStream.ts  courseActivityStreamSummary.ts  courseTodoItems.ts  createAppointmentGroup.ts  createAssignment.ts  createAssignmentGroup.ts  createCalendarEvent.ts  createCommunicationChannel.ts  createContentMigrationGroups.ts  createConversation.ts  createCourseSection.ts  createCustomGradebookColumn.ts  createEnrollmentTerm.ts  createExternalFeedCourses.ts  createExternalFeedGroups.ts  createExternalToolCourses.ts  createFolderGroups.ts  createFolderUsers.ts  (+360 more)
cli/: __init__.py  assignments.py  bootstrap.py  courses.py  discussions.py  files.py  misc.py  settings.py
client/: __init__.py  assignments.py  base.py  content.py  courses.py
conversations/: session-2025-07-12T15-48-54-821Z.md  session-2025-07-13T00-25-46-742Z.md
mcp/: __init__.py  server.py
scripts/: start_mcp_server.sh
specs/: __init__.py  assignments.py  content.py  core.py  courses.py  registry.py  schema.py
tests/: conftest.py  test_auth_and_entrypoints.py  test_canvasmcp.py  test_helpers.py  test_tools.py
tools/: __init__.py  assignments.py  canvas_tools.py  common.py  courses.py  discussions.py  files.py  grades.py  misc.py  submissions.py
(+350 files in other folders)
