[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "canvasmcp"
version = "0.1.0"
description = "Python Canvas MCP server for Canvas LMS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "browser-cookie3>=0.20.1",
  "canvasapi>=3.4.0",
  "fastmcp>=2.12.2",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.scripts]
canvas = "canvas_cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = [
  "canvas_api",
  "canvas_tools",
  "canvas_urls",
  "chrome_cookies",
  "mcp_server",
  "canvas_cli",
]
